--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -19,9 +19,9 @@
 
 <header>
 	<h1>
-		<a href="{{ page | relative }}/">Treecle</a>
+		<a href="{{ page | relative }}/">🌳 Treecle</a>
 	</h1>
-	<p>Utilities for hierarchical data</p>
+	<p>Need to handle tree-like objects? We’ve got you covered.</p>
 </header>
 <nav>
 	<a href="{{ page | relative }}/docs/">Docs</a>
