Implement Treecle class and convert methods to read config from `this` first

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -16,8 +16,8 @@
 	{# <script src="{{ page | relative }}/assets/prism.js"></script> #}
 	<script type="module">
 		// Import Treecle as a global to facilitate experimentation
-		import * as treecle from "{{ page | relative }}/src/index.js";
-		globalThis.treecle = Treecle;
+		import Treecle from "{{ page | relative }}/src/index.js";
+		globalThis.Treecle = Treecle;
 	</script>
 </head>
 <body class="language-js{{ ' has-toc' if toc }}">
